# fastapi-cleanarchitecture-sample

./: create_items_db.py  items.db  pyproject.toml
app/: main.py
app/api/: exception_handlers.py
app/api/routers/: item_router.py
app/db/: connection.py
app/db/repositories/: item_repository.py
app/domain/entities/: item.py
app/domain/usecases/: item_usecase.py
